--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,31 +2,8 @@ image: ubuntu:latest
 
 before_script:
   - apt update
-  - apt install -y cmake llvm libopenmpi-dev g++ clang
   - export LLVM_INCLUDE_PATH=$(llvm-config --includedir)
   - export CMAKE_PREFIX_PATH=$(llvm-config --libdir)/cmake/llvm
-  - cd qdmi
-  - mkdir build
-  - cd build
-  - cmake ..
-  - make
-  - echo QDMI built successfully
-  - cd ../../selector
-  - mkdir build
-  - cd build
-  - cmake -DCUSTOM_EXECUTABLE_NAME=qselectorrunner_d ..
-  - cmake --build .
-  - echo Selector Runner built successfully
-  - cd ../..
-  - mkdir build
-  - cd build
-  - cmake -DCUSTOM_EXECUTABLE_NAME=qpassrunner_d -DCUSTOM_QDMI_PATH=qdmi ..
-  - cmake --build .
-  - echo Pass Runner built successfully
-  - cd ../tests
-  - mpic++ -std=c++14 test.cpp -o test
-  - echo Test built successfully
-  - cd ..
 
 stages:
   - deploy
@@ -47,12 +24,38 @@ pages:
 analyze:
   stage: analyze
   script:
-    - find . -name "*.cpp" -exec clang --analyze -I$LLVM_INCLUDE_PATH -Iqdmi/ {} \;
+    - apt install -y llvm libopenmpi-dev clang #g++
+    - find src selector -name "*.cpp" -exec clang --analyze -I$LLVM_INCLUDE_PATH -Iqdmi/ {} \;
 
 testing:
   stage: test
   script:
+    - apt install -y cmake llvm libopenmpi-dev g++ #clang
+    # ...
+    - cd qdmi
+    - mkdir build
     - cd build
+    - cmake ..
+    - make
+    - echo QDMI built successfully
+    # ...
+    - cd ../../selector
+    - mkdir build
+    - cd build
+    - cmake -DCUSTOM_EXECUTABLE_NAME=qselectorrunner_d ..
+    - cmake --build .
+    - echo Selector Runner built successfully
+    - cd ../../tests
+    # ...
+    - mpic++ -std=c++14 test.cpp -o test
+    - echo Test built successfully
+    - cd ../build
+    - mkdir build
+    - cd build
+    - cmake -DCUSTOM_EXECUTABLE_NAME=qpassrunner_d -DCUSTOM_QDMI_PATH=qdmi ..
+    - cmake --build .
+    - echo Pass Runner built successfully
+    # ...
     - ./qpassrunner_d &
     - sleep 1
     - cd ../selector/build/
