--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,6 @@ before_script:
 
 stages:
   - deploy
-  - analyze
   - test
 
 pages:
@@ -19,18 +18,18 @@ pages:
     - if: '$CI_COMMIT_REF_NAME == "Plugins"'
 
 analyze:
-  stage: analyze
-  script:
-    - apt update
-    - apt install -y llvm libopenmpi-dev clang #g++
-    - export LLVM_INCLUDE_PATH=$(llvm-config --includedir)
-    - find src selector -name "*.cpp" -exec clang --analyze -I$LLVM_INCLUDE_PATH -Iqdmi/ {} \;
-
-testing:
   stage: test
   script:
     - apt update
-    - apt install -y cmake llvm libopenmpi-dev g++ #clang
+    - apt install -y llvm libopenmpi-dev clang 
+    - export LLVM_INCLUDE_PATH=$(llvm-config --includedir)
+    - find src selector -name "*.cpp" -exec clang --analyze -I$LLVM_INCLUDE_PATH -Iqdmi/ {} \;
+
+execute:
+  stage: test
+  script:
+    - apt update
+    - apt install -y cmake llvm libopenmpi-dev g++
     - export CMAKE_PREFIX_PATH=$(llvm-config --libdir)/cmake/llvm
     # ...
     - cd qdmi
