--- a/src/passes/CMakeLists.txt
+++ b/src/passes/CMakeLists.txt
@@ -8,6 +8,8 @@ set(PASSES_SOURCE_FILES
     QirCNotToHCZHDecomposition.cpp
     QirCommuteCnotRx.cpp
     QirCommuteRxCnot.cpp
+    QirCommuteCnotX.cpp
+    QirCommuteXCnot.cpp
     # D
     QirDeferMeasurement.cpp
     # F
