Checking if installing the qpassrunner_d daemon solves the CI problem

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,8 +56,10 @@ execute:
     - cmake -DCUSTOM_EXECUTABLE_NAME=qpassrunner_d -DCUSTOM_QDMI_PATH=qdmi ..
     - cmake --build .
     - echo Pass Runner built successfully
+    - sudo make install
+    - echo Pass Runner installed successfully
     # ...
-    - ./qpassrunner_d screen &
+    - qpassrunner_d screen &
     - sleep 1
     - cd ../selector/build/
     - ./qselectorrunner_d &
