--- a/scheduler/CMakeLists.txt
+++ b/scheduler/CMakeLists.txt
@@ -15,6 +15,37 @@ if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
 endif()
 set(SCHEDULER_RUNNER_DAEMON_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}")
 
+# Find the Threads package
+find_package(Threads REQUIRED)
+
+# Set LLVM_ENABLE_THREADS to ON
+set(LLVM_ENABLE_THREADS ON)
+
+# Find LLVMConfig.cmake
+find_path(LLVM_CONFIG_DIR LLVMConfig.cmake
+  HINTS
+  "${CMAKE_PREFIX_PATH}"
+  ENV LLVM_DIR
+)
+
+if (NOT LLVM_CONFIG_DIR)
+  message(FATAL_ERROR "LLVMConfig.cmake not found. Set CMAKE_PREFIX_PATH or LLVM_DIR.")
+endif()
+
+message(STATUS "Using LLVMConfig.cmake in: ${LLVM_CONFIG_DIR}")
+
+# Include LLVMConfig.cmake
+list(APPEND CMAKE_PREFIX_PATH "${LLVM_CONFIG_DIR}")
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${LLVM_CONFIG_DIR}")
+find_package(LLVM REQUIRED CONFIG)
+
+# Set up LLVM-specific flags
+add_definitions(${LLVM_DEFINITIONS})
+include_directories(${LLVM_INCLUDE_DIRS})
+
+## Add the passes directory to include paths
+#include_directories(headers)
+
 # Set the source files for your project
 set(SOURCES
     qschedulerrunner_d.cpp
@@ -40,7 +71,7 @@ include_directories(${CUSTOM_QDMI_PATH})
 add_executable(qschedulerrunner_d ${SOURCES})
 
 # Link the RabbitMQ and the Threads libraries
-target_link_libraries(qschedulerrunner_d PRIVATE Threads::Threads rabbitmq qdmi)
+target_link_libraries(qschedulerrunner_d PRIVATE LLVM Threads::Threads rabbitmq qdmi)
 
 # Include selectors subdirectory
 add_subdirectory(schedulers)
