First commit. Removing sockets and adopting RabbitMQ.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,19 @@
 cmake_minimum_required(VERSION 3.22.1)
-project(QirPassRunner
+project(QuantumResourceManager
   VERSION 0.3
-  DESCRIPTION "QIR Pass Runner")
-
-# Create the qpassrunner_d.log file
-file(WRITE "$ENV{HOME}/qpassrunner_d.log" "")
-
-# Copy the test.ll benchmark to /usr/
-file(COPY ${CMAKE_SOURCE_DIR}/benchmarks/test.ll
-     DESTINATION /usr/local/bin/src/schedulers/benchmarks/)
+  DESCRIPTION "Quantum Resource Manager")
 
 # Set the C++ standard
 set(CMAKE_CXX_STANDARD 14)
 
 # Set the installation directory for the daemon
 if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
-    set(CMAKE_INSTALL_PREFIX "/usr/local" CACHE PATH "Installation directory" FORCE)
+    set(CMAKE_INSTALL_PREFIX $ENV{HOME} CACHE PATH "Installation directory" FORCE)
 endif()
-set(PASS_RUNNER_DAEMON_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}")
+set(INSTALL_PATH "${CMAKE_INSTALL_PREFIX}")
+
+# Create the daemon_d.log file
+file(WRITE ${CMAKE_INSTALL_PREFIX}/logs/daemon_d.log "")
 
 # Find the Threads package
 find_package(Threads REQUIRED)
@@ -48,10 +44,10 @@ add_definitions(${LLVM_DEFINITIONS})
 include_directories(${LLVM_INCLUDE_DIRS})
 
 # Add the passes directory to include paths
-include_directories(src/headers)
+include_directories(src/pass_runner/headers src/scheduler_runner src/scheduler_runner)
 
-# Specify the path to QDMI using the CUSTOM_QDMI_PATH variable
-set(QDMI_PATH ${CUSTOM_QDMI_PATH})
+## Specify the path to QDMI using the CUSTOM_QDMI_PATH variable
+#set(QDMI_PATH ${CUSTOM_QDMI_PATH})
 
 # Specify the path to the directory containing libqdmi.so
 link_directories(${CUSTOM_QDMI_PATH}/build)
@@ -60,7 +56,7 @@ link_directories(${CUSTOM_QDMI_PATH}/build)
 include_directories(${CUSTOM_QDMI_PATH})
 
 # Build QirPassRunner as a shared library
-add_library(QirPassRunner SHARED src/QirPassRunner.cpp)
+add_library(QirPassRunner SHARED src/pass_runner/QirPassRunner.cpp)
 
 set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/bin/src/passes")
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
@@ -72,19 +68,32 @@ target_link_libraries(QirPassRunner PRIVATE qdmi)
 # Specify the output directory for the shared library
 set_target_properties(QirPassRunner PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/src/passes")
 
-# Get the executable name from the CUSTOM_EXECUTABLE_NAME variable
-set(EXECUTABLE_NAME ${CUSTOM_EXECUTABLE_NAME} CACHE STRING "Name of your executable" FORCE)
+set(EXECUTABLE_NAME "daemon_d" CACHE STRING "" FORCE)
 
 # Build the executable
-add_executable(${EXECUTABLE_NAME} src/qpassrunner_d.cpp)
+set(SOURCES
+    src/daemon_d.cpp
+    src/connection_handling.cpp
+    src/scheduler_runner/SchedulerRunner.cpp
+    src/selector_runner/SelectorRunner.cpp
+    src/pass_runner/PassRunner.cpp
+)
+add_executable(${EXECUTABLE_NAME} ${SOURCES})
 
 # Link the executable with LLVM and Threads libraries
 target_link_libraries(${EXECUTABLE_NAME} PRIVATE LLVM)
 target_link_libraries(${EXECUTABLE_NAME} PRIVATE Threads::Threads)
 target_link_libraries(${EXECUTABLE_NAME} PRIVATE QirPassRunner)
+target_link_libraries(${EXECUTABLE_NAME} PRIVATE rabbitmq)
+target_link_libraries(${EXECUTABLE_NAME} PRIVATE qdmi)
 
 # Include passes subdirectory
-add_subdirectory(src/passes)
+add_subdirectory(src/pass_runner/passes)
+add_subdirectory(src/selector_runner/selectors)
+add_subdirectory(src/scheduler_runner/schedulers)
+
+# Include RabbitMQ header files
+target_include_directories(${EXECUTABLE_NAME} PRIVATE /usr/local/include)
 
 # Install the daemon
 install(TARGETS ${EXECUTABLE_NAME} DESTINATION bin)
