--- a/src/scheduler_runner/schedulers/CMakeLists.txt
+++ b/src/scheduler_runner/schedulers/CMakeLists.txt
@@ -7,7 +7,7 @@ set(SCHEDULERS_SOURCE_FILES
 )
 
 # Set RPATH for the shared libraries in this directory
-set(CMAKE_INSTALL_RPATH "${SCHEDULER_RUNNER_DAEMON_INSTALL_PATH}/bin/src/schedulers")
+set(CMAKE_INSTALL_RPATH "${INSTALL_PATH}/bin/src/schedulers")
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 # Compile each scheduler as a shared object
@@ -15,12 +15,13 @@ foreach(src_file ${SCHEDULERS_SOURCE_FILES})
     get_filename_component(src_name ${src_file} NAME_WE)
     set(target_name "${src_name}")
     add_library(${target_name} MODULE ${src_file})
+    install(TARGETS ${target_name} DESTINATION "${INSTALL_PATH}/bin/src/schedulers")
 endforeach()
 
-# Specify the installation directory for the shared libraries
-foreach(src_file ${SCHEDULERS_SOURCE_FILES})
-    get_filename_component(src_name ${src_file} NAME_WE)
-    set(target_name "${src_name}")
-    install(TARGETS ${target_name} DESTINATION "${SCHEDULER_RUNNER_DAEMON_INSTALL_PATH}/bin/src/schedulers")
-endforeach()
+## Specify the installation directory for the shared libraries
+#foreach(src_file ${SCHEDULERS_SOURCE_FILES})
+#    get_filename_component(src_name ${src_file} NAME_WE)
+#    set(target_name "${src_name}")
+#    install(TARGETS ${target_name} DESTINATION "${INSTALL_PATH}/bin/src/schedulers")
+#endforeach()
 
