--- a/src/selector_runner/selectors/CMakeLists.txt
+++ b/src/selector_runner/selectors/CMakeLists.txt
@@ -7,7 +7,8 @@ set(SELECTORS_SOURCE_FILES
 )
 
 # Set RPATH for the shared libraries in this directory
-set(CMAKE_INSTALL_RPATH "${INSTALL_PATH}/bin/src/selectors")
+#set(CMAKE_INSTALL_RPATH "${INSTALL_PATH}/bin/src/selector_runner/selectors")
+set(CMAKE_INSTALL_RPATH "${ORIGIN}/src/selector_runner/selectors")
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 # Compile each selector as a shared object
@@ -15,13 +16,7 @@ foreach(src_file ${SELECTORS_SOURCE_FILES})
     get_filename_component(src_name ${src_file} NAME_WE)
     set(target_name "${src_name}")
     add_library(${target_name} MODULE ${src_file})
-    install(TARGETS ${target_name} DESTINATION "${INSTALL_PATH}/bin/src/selectors")
+    #install(TARGETS ${target_name} DESTINATION "${INSTALL_PATH}/bin/src/selector_runner/selectors")
+    install(TARGETS ${target_name} DESTINATION "${ORIGIN}/src/selector_runner/selectors")
 endforeach()
-
-## Specify the installation directory for the shared libraries
-#foreach(src_file ${SELECTORS_SOURCE_FILES})
-#    get_filename_component(src_name ${src_file} NAME_WE)
-#    set(target_name "${src_name}")
-#    install(TARGETS ${target_name} DESTINATION "${INSTALL_PATH}/bin/src/selectors")
-#endforeach()
 
