--- a/src/scheduler_runner/schedulers/CMakeLists.txt
+++ b/src/scheduler_runner/schedulers/CMakeLists.txt
@@ -7,7 +7,8 @@ set(SCHEDULERS_SOURCE_FILES
 )
 
 # Set RPATH for the shared libraries in this directory
-set(CMAKE_INSTALL_RPATH "${INSTALL_PATH}/bin/src/schedulers")
+#set(CMAKE_INSTALL_RPATH "${INSTALL_PATH}/bin/src/scheduler_runner/schedulers")
+set(CMAKE_INSTALL_RPATH "${ORIGIN}/src/scheduler_runner/schedulers")
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 # Compile each scheduler as a shared object
@@ -15,13 +16,8 @@ foreach(src_file ${SCHEDULERS_SOURCE_FILES})
     get_filename_component(src_name ${src_file} NAME_WE)
     set(target_name "${src_name}")
     add_library(${target_name} MODULE ${src_file})
-    install(TARGETS ${target_name} DESTINATION "${INSTALL_PATH}/bin/src/schedulers")
+    target_link_libraries(${target_name} PRIVATE qdmi)
+    #install(TARGETS ${target_name} DESTINATION "${INSTALL_PATH}/bin/src/scheduler_runner/schedulers")
+    install(TARGETS ${target_name} DESTINATION "${ORIGIN}/src/scheduler_runner/schedulers")
 endforeach()
-
-## Specify the installation directory for the shared libraries
-#foreach(src_file ${SCHEDULERS_SOURCE_FILES})
-#    get_filename_component(src_name ${src_file} NAME_WE)
-#    set(target_name "${src_name}")
-#    install(TARGETS ${target_name} DESTINATION "${INSTALL_PATH}/bin/src/schedulers")
-#endforeach()
 
