--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,13 @@
 image: ubuntu:latest
 
+variables:
+  RABBITMQ_DEFAULT_USER: guest
+  RABBITMQ_DEFAULT_PASS: guest
+  AMQP_URL: 'amqp://guest:guest@rabbitmq:5672'
+
+services:
+  - rabbitmq:latest
+
 before_script:
 
 stages:
@@ -29,18 +37,19 @@ execute:
   stage: test
   script:
     - apt update
-    - apt install -y cmake llvm rabbitmq-server g++ curl
-    - curl -LO https://github.com/alanxz/rabbitmq-c/archive/refs/tags/v0.13.0.tar.gz
-    - tar -xf v0.13.0.tar.gz
-    - cd rabbitmq-c-0.13.0/
-    - mkdir build
-    - cd build
-    - cmake -DBUILD_TESTING=OFF -DBUILD_EXAMPLES=OFF -DENABLE_SSL_SUPPORT=OFF ..
-    - cmake --build . --target install
-    - ldconfig
-    - cd ../..
-    - rm -rf rabbitmq-c-0.13.0/
-    # ...
+    - apt install -y cmake llvm g++
+   #- apt install -y cmake llvm rabbitmq-server g++ curl
+   #- curl -LO https://github.com/alanxz/rabbitmq-c/archive/refs/tags/v0.13.0.tar.gz
+   #- tar -xf v0.13.0.tar.gz
+   #- cd rabbitmq-c-0.13.0/
+   #- mkdir build
+   #- cd build
+   #- cmake -DBUILD_TESTING=OFF -DBUILD_EXAMPLES=OFF -DENABLE_SSL_SUPPORT=OFF ..
+   #- cmake --build . --target install
+   #- ldconfig
+   #- cd ../..
+   #- rm -rf rabbitmq-c-0.13.0/
+   # ...
     - cd qdmi
     - mkdir build
     - cd build
