Enabling RabbitMQ service in CI testing

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,18 +37,18 @@ execute:
   stage: test
   script:
     - apt update
-    - apt install -y cmake llvm g++
-   #- apt install -y cmake llvm rabbitmq-server g++ curl
-   #- curl -LO https://github.com/alanxz/rabbitmq-c/archive/refs/tags/v0.13.0.tar.gz
-   #- tar -xf v0.13.0.tar.gz
-   #- cd rabbitmq-c-0.13.0/
-   #- mkdir build
-   #- cd build
-   #- cmake -DBUILD_TESTING=OFF -DBUILD_EXAMPLES=OFF -DENABLE_SSL_SUPPORT=OFF ..
-   #- cmake --build . --target install
-   #- ldconfig
-   #- cd ../..
-   #- rm -rf rabbitmq-c-0.13.0/
+   #- apt install -y cmake llvm g++
+    - apt install -y cmake llvm rabbitmq-server g++ curl
+    - curl -LO https://github.com/alanxz/rabbitmq-c/archive/refs/tags/v0.13.0.tar.gz
+    - tar -xf v0.13.0.tar.gz
+    - cd rabbitmq-c-0.13.0/
+    - mkdir build
+    - cd build
+    - cmake -DBUILD_TESTING=OFF -DBUILD_EXAMPLES=OFF -DENABLE_SSL_SUPPORT=OFF ..
+    - cmake --build . --target install
+    - ldconfig
+    - cd ../..
+    - rm -rf rabbitmq-c-0.13.0/
    # ...
     - cd qdmi
     - mkdir build
