--- a/src/pass_runner/passes/CMakeLists.txt
+++ b/src/pass_runner/passes/CMakeLists.txt
@@ -66,7 +66,7 @@ list(APPEND PASSES_SOURCE_FILES QirAllocationAnalysis.cpp)
 foreach(src_file ${PASSES_SOURCE_FILES})
     get_filename_component(src_name ${src_file} NAME_WE)
     set(target_name "${src_name}Pass")
-    #install(TARGETS ${target_name} DESTINATION "${INSTALL_PATH}/bin/src/pass_runner/passes")
-    install(TARGETS ${target_name} DESTINATION "${ORIGIN}/src/pass_runner/passes")
+    install(TARGETS ${target_name} DESTINATION "${INSTALL_PATH}/bin/src/pass_runner/passes")
+    #install(TARGETS ${target_name} DESTINATION "${ORIGIN}/src/pass_runner/passes")
 endforeach()
 
