--- a/src/selector_runner/selectors/CMakeLists.txt
+++ b/src/selector_runner/selectors/CMakeLists.txt
@@ -7,8 +7,8 @@ set(SELECTORS_SOURCE_FILES
 )
 
 # Set RPATH for the shared libraries in this directory
-#set(CMAKE_INSTALL_RPATH "${INSTALL_PATH}/bin/src/selector_runner/selectors")
-set(CMAKE_INSTALL_RPATH "${ORIGIN}/src/selector_runner/selectors")
+set(CMAKE_INSTALL_RPATH "${INSTALL_PATH}/bin/src/selector_runner/selectors")
+#set(CMAKE_INSTALL_RPATH "${ORIGIN}/src/selector_runner/selectors")
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 # Compile each selector as a shared object
@@ -17,6 +17,6 @@ foreach(src_file ${SELECTORS_SOURCE_FILES})
     set(target_name "${src_name}")
     add_library(${target_name} MODULE ${src_file})
     #install(TARGETS ${target_name} DESTINATION "${INSTALL_PATH}/bin/src/selector_runner/selectors")
-    install(TARGETS ${target_name} DESTINATION "${ORIGIN}/src/selector_runner/selectors")
+    #install(TARGETS ${target_name} DESTINATION "${ORIGIN}/src/selector_runner/selectors")
 endforeach()
 
