--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,8 +81,22 @@ execute:
     - echo Test built successfully
     - cd ..
     # ...
+    - export INSTALL_PREFIX=$HOME
+    - export QDMI_PATH=$PWD/qdmi
     - cd build
-    - ./daemon_d screen
+    - export CMAKE_PREFIX_PATH=$(llvm-config --libdir)/cmake/llvm
+    - export LD_LIBRARY_PATH=$QDMI_PATH/build:$LD_LIBRARY_PATH
+    - export LD_LIBRARY_PATH=$INSTALL_PREFIX/bin/src/pass_runner:$LD_LIBRARY_PATH
+    - export LD_LIBRARY_PATH=$INSTALL_PREFIX/bin/src/pass_runner/passes:$LD_LIBRARY_PATH
+    - export LD_LIBRARY_PATH=$INSTALL_PREFIX/bin/src/selector_runner:$LD_LIBRARY_PATH
+    - export LD_LIBRARY_PATH=$INSTALL_PREFIX/bin/src/selector_runner/selectors:$LD_LIBRARY_PATH
+    - export LD_LIBRARY_PATH=$INSTALL_PREFIX/bin/src/scheduler_runner:$LD_LIBRARY_PATH
+    - export LD_LIBRARY_PATH=$INSTALL_PREFIX/bin/src/scheduler_runner/schedulers:$LD_LIBRARY_PATH
+    # ...
+    - cmake -DCMAKE_INSTALL_PREFIX=$INSTALL_PREFIX -DCUSTOM_QDMI_PATH=$QDMI_PATH ..
+    - cmake -DCMAKE_INSTALL_PREFIX=$INSTALL_PREFIX -DCUSTOM_QDMI_PATH=$QDMI_PATH ..
+    - ldconfig
+    - daemon_d screen
     - sleep 1
     - ../tests/test
   artifacts:
